--- a/index.html
+++ b/index.html
@@ -32,6 +32,7 @@
                 <a href="#"><i class="fa-brands fa-linkedin text-3xl text-blue-400"></i></a>
                 <h1 class="text-3xl">Hello I'm</h1>
                 <h2 class=" text-7xl">Arman Khan</h2>
+                <h2>I'm a Web Developer</h2>
             </div>
             <div class="hero-image">
                 <img src="./img/logo.png" alt="">
