--- a/index.html
+++ b/index.html
@@ -1,13 +1,15 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Arman Khan</title>
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css"/>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css" />
     <link rel="stylesheet" href="./dist/output.css">
 </head>
+
 <body>
     <header class="main-header bg-slate-300 h-screen">
         <nav class="nav-area flex m-0 m-auto justify-between items-center w-[90%]">
@@ -24,21 +26,22 @@
                 </ul>
             </div>
         </nav>
-        <div class="hero-area flex justify-between items-center w-[85%] m-auto">
-           
-            <div class="hero-title w-1/2">
-                <a href="#"><i class="fa-brands fa-github text-3xl text-blue-400"></i></a>
-                <a href="#"><i class="fa-brands fa-facebook text-3xl text-blue-400"></i></a>
-                <a href="#"><i class="fa-brands fa-linkedin text-3xl text-blue-400"></i></a>
-                <h1 class="text-3xl">Hello I'm</h1>
-                <h2 class=" text-7xl">Arman Khan</h2>
-                <h2>I'm a Web Developer</h2>
-            </div>
-            <div class="hero-image">
-                <img src="./img/logo.png" alt="">
+        <div class="hero-area flex justify-center z-10" id="particles-js">
+            <div class="hero-items z-[-1] absolute flex justify-between items-center w-[85%] m-auto m-0">
+                <div class="hero-title">
+                    <h2 class="text-white">Hi I'm <span class="text-4xl"> Arman Khan</span></h2>
+                </div>
+                <div class="hero-image">
+                    <img src="./img/logo.png" alt="">
+                </div>
             </div>
         </div>
     </header>
 
+    <script src="http://cdn.jsdelivr.net/particles.js/2.0.0/particles.min.js"></script>
+    <script>
+        particlesJS("particles-js", { "particles": { "number": { "value": 111, "density": { "enable": true, "value_area": 561.194221302933 } }, "color": { "value": "#ffffff" }, "shape": { "type": "circle", "stroke": { "width": 0, "color": "#000000" }, "polygon": { "nb_sides": 5 }, "image": { "src": "img/github.svg", "width": 100, "height": 100 } }, "opacity": { "value": 0.5, "random": false, "anim": { "enable": false, "speed": 1, "opacity_min": 0.1, "sync": false } }, "size": { "value": 3, "random": true, "anim": { "enable": false, "speed": 40, "size_min": 0.1, "sync": false } }, "line_linked": { "enable": true, "distance": 150, "color": "#ffffff", "opacity": 0.4, "width": 1 }, "move": { "enable": true, "speed": 6, "direction": "none", "random": false, "straight": false, "out_mode": "out", "bounce": false, "attract": { "enable": false, "rotateX": 600, "rotateY": 2840.9315098761817 } } }, "interactivity": { "detect_on": "canvas", "events": { "onhover": { "enable": true, "mode": "repulse" }, "onclick": { "enable": true, "mode": "push" }, "resize": true }, "modes": { "grab": { "distance": 400, "line_linked": { "opacity": 1 } }, "bubble": { "distance": 400, "size": 40, "duration": 2, "opacity": 8, "speed": 3 }, "repulse": { "distance": 71.92807192807193, "duration": 0.4 }, "push": { "particles_nb": 4 }, "remove": { "particles_nb": 2 } } }, "retina_detect": true }); var count_particles, stats, update; stats = new Stats; stats.setMode(0); stats.domElement.style.position = 'absolute'; stats.domElement.style.left = '0px'; stats.domElement.style.top = '0px'; document.body.appendChild(stats.domElement); count_particles = document.querySelector('.js-count-particles'); update = function () { stats.begin(); stats.end(); if (window.pJSDom[0].pJS.particles && window.pJSDom[0].pJS.particles.array) { count_particles.innerText = window.pJSDom[0].pJS.particles.array.length; } requestAnimationFrame(update); }; requestAnimationFrame(update);;
+    </script>
 </body>
+
 </html>
