--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 </head>
 
 <body>
-    <header class="main-header bg-slate-300 h-screen">
+    <header class="main-headerh-screen">
         <nav class="nav-area flex m-0 m-auto justify-between items-center w-[90%]">
             <div class="logo-area w-12">
                 <img src="./img/logo.png" alt="">
