--- a/index.html
+++ b/index.html
@@ -11,23 +11,28 @@
 </head>
 
 <body>
-    <header class="main-header h-screen">
+    <header class="main-header h-screen bg-black w-screen">
         <nav class="nav-area flex m-0 m-auto justify-between items-center w-[90%]">
             <div class="logo-area w-12">
                 <img src="./img/logo.png" alt="">
             </div>
             <div class="nav-area">
                 <ul class="flex">
-                    <li class="hover:bg-orange-400 hover:text-white py-4 px-8"><a href="#">Home</a></li>
-                    <li class="hover:bg-orange-400 hover:text-white py-4 px-8"><a href="#">About</a></li>
-                    <li class="hover:bg-orange-400 hover:text-white py-4 px-8"><a href="#">Portfolio</a></li>
-                    <li class="hover:bg-orange-400 hover:text-white py-4 px-8"><a href="#">Projects</a></li>
-                    <li class="hover:bg-orange-400 hover:text-white py-4 px-8"><a href="#">Contact</a></li>
+                    <li class="hover:bg-orange-400 rounded-md hover:text-white py-2 text-white px-8"><a
+                            href="#">Home</a></li>
+                    <li class="hover:bg-orange-400 rounded-md hover:text-white py-2 text-white px-8"><a
+                            href="#">About</a></li>
+                    <li class="hover:bg-orange-400 rounded-md hover:text-white py-2 text-white px-8"><a
+                            href="#">Portfolio</a></li>
+                    <li class="hover:bg-orange-400 rounded-md hover:text-white py-2 text-white px-8"><a
+                            href="#">Projects</a></li>
+                    <li class="hover:bg-orange-400 rounded-md hover:text-white py-2 text-white px-8"><a
+                            href="#">Contact</a></li>
                 </ul>
             </div>
         </nav>
-        <div class="hero-area flex justify-center z-10" id="particles-js">
-            <div class="hero-items z-[-1] absolute flex justify-between items-center w-[85%] m-auto m-0">
+        <div class="hero-area flex justify-center">
+            <div class="hero-items absolute flex justify-between items-center w-[85%] m-auto m-0">
                 <div class="hero-title">
                     <h2 class="text-white">Hi I'm <span class="text-4xl"> Arman Khan</span></h2>
                 </div>
@@ -37,11 +42,17 @@
             </div>
         </div>
     </header>
+    <main>
+        <section class="about-area bg-blue-200  h-screen w-screen absolute top-0 justify-center flex">
+            <div class="about-items flex justify-center items-bottom text-orange-600 border-b-4 border-orange-600 text-center bottom-[40%] right-12 absolute">
+               <div class=" text-5xl about-item">
+                <h1>About Me</h1>
+               </div> 
+            </div>
+           
 
-    <script src="http://cdn.jsdelivr.net/particles.js/2.0.0/particles.min.js"></script>
-    <script>
-        particlesJS("particles-js", { "particles": { "number": { "value": 111, "density": { "enable": true, "value_area": 561.194221302933 } }, "color": { "value": "#ffffff" }, "shape": { "type": "circle", "stroke": { "width": 0, "color": "#000000" }, "polygon": { "nb_sides": 5 }, "image": { "src": "img/github.svg", "width": 100, "height": 100 } }, "opacity": { "value": 0.5, "random": false, "anim": { "enable": false, "speed": 1, "opacity_min": 0.1, "sync": false } }, "size": { "value": 3, "random": true, "anim": { "enable": false, "speed": 40, "size_min": 0.1, "sync": false } }, "line_linked": { "enable": true, "distance": 150, "color": "#ffffff", "opacity": 0.4, "width": 1 }, "move": { "enable": true, "speed": 6, "direction": "none", "random": false, "straight": false, "out_mode": "out", "bounce": false, "attract": { "enable": false, "rotateX": 600, "rotateY": 2840.9315098761817 } } }, "interactivity": { "detect_on": "canvas", "events": { "onhover": { "enable": true, "mode": "repulse" }, "onclick": { "enable": true, "mode": "push" }, "resize": true }, "modes": { "grab": { "distance": 400, "line_linked": { "opacity": 1 } }, "bubble": { "distance": 400, "size": 40, "duration": 2, "opacity": 8, "speed": 3 }, "repulse": { "distance": 71.92807192807193, "duration": 0.4 }, "push": { "particles_nb": 4 }, "remove": { "particles_nb": 2 } } }, "retina_detect": true }); var count_particles, stats, update; stats = new Stats; stats.setMode(0); stats.domElement.style.position = 'absolute'; stats.domElement.style.left = '0px'; stats.domElement.style.top = '0px'; document.body.appendChild(stats.domElement); count_particles = document.querySelector('.js-count-particles'); update = function () { stats.begin(); stats.end(); if (window.pJSDom[0].pJS.particles && window.pJSDom[0].pJS.particles.array) { count_particles.innerText = window.pJSDom[0].pJS.particles.array.length; } requestAnimationFrame(update); }; requestAnimationFrame(update);;
-    </script>
+        </section>
+    </main>
 </body>
 
 </html>
